--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 )
 ```
 
+[![Travis-CI Build Status](https://travis-ci.org/NA/NA.svg?branch=master)](https://travis-ci.org/NA/NA)
+
 This package use some metrics to find optimal number of topics for Latent Dirichlet allocation (LDA) models.
 
 ```{r, fig.width=9, fig.height=5, echo=FALSE}
