--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-[![Travis-CI Build Status](https://travis-ci.org/NA/NA.svg?branch=master)](https://travis-ci.org/NA/NA)
+[![Travis-CI Build Status](https://travis-ci.org/nikita-moor/ldatuning.svg?branch=master)](https://travis-ci.org/nikita-moor/ldatuning)
 
 This package use some metrics to find optimal number of topics for Latent Dirichlet allocation (LDA) models.
 
