--- a/README.Rmd
+++ b/README.Rmd
@@ -23,4 +23,4 @@ result <- read.csv(file = "vignettes/files/APress.csv", header = TRUE)
 ldatuning::FindTopicsNumber_plot(result[result$topics < 500, ])
 ```
 
-For more complete explanation see [vignette](http://rpubs.com/nikita-moor/107657).
+For more complete explanation see [vignette](http://rpubs.com/siri/ldatuning).
