--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 [![Travis-CI Build Status](https://travis-ci.org/nikita-moor/ldatuning.svg?branch=master)](https://travis-ci.org/nikita-moor/ldatuning)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/ldatuning)](https://cran.r-project.org/package=ldatuning)
 
 This package uses some metrics to find optimal number of topics for Latent Dirichlet allocation (LDA) models.
 
